data/derived/fa15/progs/unify/prog1693.ml.out
Characters 46-52:
  |buildX->buildX()
           ^^^^^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
